Fix sidenavigation and maincontent layout on small screens

--- a/new-site/src/components/layout.scss
+++ b/new-site/src/components/layout.scss
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import '~hds-design-tokens/lib/all.scss';
+
 @font-face {
   font-family: HelsinkiGrotesk;
   src: url(https://makasiini.hel.ninja/delivery/HelsinkiGrotesk/565d73a693abe0776c801607ac28f0bf.woff) format("woff");
@@ -80,7 +82,6 @@ body {
 
 .pageContent {
   flex: 1;
-  display: flex;
   margin: 0 auto;
   padding: var(--spacing-m) 0;
   height: 100%;
@@ -90,16 +91,24 @@ body {
 .sideContent {
   margin-bottom: auto;
   min-width: 230px;
-  padding: var(--spacing-s) 0;
 }
 
-.sideContent + .mainContent {
-  border-left: 1px solid var(--color-black-20);
-}
+@media screen and (min-width: $breakpoint-m) {
+  .pageContent {
+    display: flex;
+  }
 
-.mainContent {
-  flex: 1;
-  padding: 0 var(--spacing-m) var(--spacing-m);
+  .sideContent {
+    margin-bottom: auto;
+    min-width: 230px;
+    padding: var(--spacing-s) 0;
+  }
+
+  .mainContent {
+    border-left: 1px solid var(--color-black-20);
+    flex: 1;
+    padding: 0 var(--spacing-m) var(--spacing-m);
+  }
 }
 
 .pageFooter {
